// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form demo -- form 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c12 {
  vertical-align: baseline;
}

.c28 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c28:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c9 .c10 {
  color: #c3cad9;
}

.c9 .c10 {
  color: #3860f4;
}

.c13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #c3cad9;
}

.c13:hover {
  color: #0a1633;
}

.c13:hover .c10 {
  color: #3357df;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bxivhb {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bxivhb:last-child {
  margin-right: 0;
}

.c7 .c31 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c31:last-child {
  margin-right: 0;
}

.c7 .c32+.c32 {
  margin-left: -1px;
}

.c7 .c30 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c30:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c30:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c18 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c20 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c25 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c16:hover {
  border-color: #3357df;
}

.c16:hover .c22 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c16 .c22 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c16 .c24 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c16 .c17 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c16 .c19,
.c16 .c21 {
  line-height: 16px;
}

.c16 .c19 {
  padding-right: 20px;
}

.c16 .c21 {
  padding-left: 20px;
}

.c16 .c19 {
  display: none;
}

.c15 {
  display: table;
  width: 100%;
}

.c14 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c14 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c14 input,
.c14 input:hover,
.c14 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c14:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c14 input {
  line-height: 26px;
  height: 26px;
}

.c14 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c14 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c14 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c14 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c27 {
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.c29 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c26 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            lg
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <form
      class="uc-fe-form c0"
    >
      <div
        class="c1 uc-fe-form-item uc-fe-row c2"
      >
        <div
          class="uc-fe-form-label c3 c4 uc-fe-col c5"
          span="3"
        >
          Input
        </div>
        <div
          class="uc-fe-form-controller c4 uc-fe-col c6"
          span="9"
        >
          <span
            class="uc-fe-input c14"
          >
            <span
              class="c15"
            >
              <input />
            </span>
          </span>
        </div>
      </div>
      <div
        class="c1 uc-fe-form-item uc-fe-row c2"
      >
        <div
          class="uc-fe-form-label c3 c4 uc-fe-col c5"
          span="3"
        >
          Switch
        </div>
        <div
          class="uc-fe-form-controller c4 uc-fe-col c6"
          span="9"
        >
          <div
            class="c16"
          >
            <div
              class="c17 c18"
            >
              <span
                class="c19 c20"
              >
                ON
              </span>
              <span
                class="c21 c20"
              >
                OFF
              </span>
              <span
                class="c22 c23"
              >
                <span
                  class="c24 c25"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 uc-fe-form-item uc-fe-row c2"
      >
        <div
          class="uc-fe-form-label c3 c4 uc-fe-col c5"
          span="3"
        >
          上传文件
        </div>
        <div
          class="uc-fe-form-controller c4 uc-fe-col c6"
          span="9"
        >
          <div
            class="c26"
          >
            <div>
              <button
                class="c27 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c28"
                type="button"
              >
                <div>
                  请选择
                </div>
                <i
                  class="uc-fe-icon icon__down c29 c12"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Form demo -- group 1`] = `
.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c4:before,
.c4:after {
  content: ' ';
  display: table;
}

.c4:after {
  clear: both;
}

.c4 .c6 {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c1 + .c1 {
  margin-top: 24px;
}

.c2 {
  font-weight: bold;
  line-height: 22px;
  padding: 12px 0;
  margin-bottom: 24px;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
  color: #0a1633;
}

.c0 .c3 {
  margin-bottom: 16px;
}

.c0 .c3:last-child {
  margin-bottom: 0;
}

.c31 {
  vertical-align: baseline;
}

.c10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c10:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c18 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c20 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c25 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c16:hover {
  border-color: #3357df;
}

.c16:hover .c22 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c16 .c22 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c16 .c24 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c16 .c17 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c16 .c19,
.c16 .c21 {
  line-height: 16px;
}

.c16 .c19 {
  padding-right: 20px;
}

.c16 .c21 {
  padding-left: 20px;
}

.c16 .c19 {
  display: none;
}

.c38 {
  display: table;
  width: 100%;
}

.c37 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c37 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c37 input,
.c37 input:hover,
.c37 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c37:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c37 input {
  line-height: 26px;
  height: 26px;
}

.c37 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c37 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c37 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c37 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c34 {
  position: relative;
}

.c36 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c30 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.c30:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c28 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  height: 28px;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.c28 .c35 {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c28 .c35::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c28 .c35::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c28 .c35:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c28 .c35::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c28:hover {
  border-color: #c3cad9;
}

.c28 .c33 {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.c28 .c33:hover {
  background: #f6f6fb;
}

.c28 .c35 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c28 .c29,
.c28 .c32 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c28 .c29:hover,
.c28 .c32:hover {
  color: #3860f4;
}

.c28 .c29 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c28 .c32 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.c15 {
  display: table-cell;
  vertical-align: middle;
}

.c14 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c14 .c39 {
  color: #3860f4;
}

.c14 .c40 {
  color: #526075;
}

.c9 {
  display: inline-block;
  cursor: pointer;
}

.c11 {
  margin-left: 5px;
}

.c12 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c13 {
  border: none;
}

.c27 {
  display: inline-block;
  vertical-align: middle;
  margin-right: 12px;
  padding: 0 10px;
}

.c26 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  height: 28px;
}

.c26 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  background: #fafafc;
  border: 1px solid #c3cad9;
  height: 28px;
  border-left: 0;
  border-right: 0;
}

.c26 .uc-fe-slider-rail::before,
.c26 .uc-fe-slider-rail::after {
  content: '';
  display: inline-block;
  width: 10px;
  height: 100%;
  position: absolute;
  border: 1px solid #c3cad9;
  top: -1px;
  background: #fafafc;
}

.c26 .uc-fe-slider-rail::before {
  left: -10px;
  border-radius: 2px 0 0 2px;
  border-right: 0;
}

.c26 .uc-fe-slider-rail::after {
  right: -10px;
  border-radius: 0 2px 2px 0;
  border-left: 0;
}

.c26 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #3860f4;
  background: #f8f8ff;
  height: 28px;
  border-left: 0;
  border-right: 0;
}

.c26 .uc-fe-slider-track::before {
  content: '';
  display: inline-block;
  width: 10px;
  height: 100%;
  position: absolute;
  border: 1px solid #3860f4;
  top: -1px;
  background: #f8f8ff;
  left: -10px;
  border-radius: 2px 0 0 2px;
  border-right: 0;
}

.c26 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c26 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  touch-action: pan-x;
  z-index: 9;
  height: 34px;
  line-height: 36px;
}

.c26 .uc-fe-slider-handle::before,
.c26 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #c3cad9;
  margin-top: 8px;
}

.c26 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c26 .uc-fe-slider-handle:hover,
.c26 .uc-fe-slider-handle:active {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c26 .uc-fe-slider-handle:hover::before,
.c26 .uc-fe-slider-handle:active::before,
.c26 .uc-fe-slider-handle:hover::after,
.c26 .uc-fe-slider-handle:active::after {
  background: #3860f4;
}

.c26 .uc-fe-slider-handle:active {
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c26 .uc-fe-slider-handle:focus {
  outline: none;
}

.c26 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c26 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  width: 30%;
  margin-left: -30%;
  overflow: hidden;
  cursor: pointer;
  color: #7a8baa;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c26 .uc-fe-slider-mark-text-active {
  color: #3860f4;
  border-right-color: #3860f4;
}

.c26 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c26 .uc-fe-slider-dot {
  display: none;
}

<form
  class="uc-fe-form c0"
>
  <div
    class="uc-fe-form-group c1"
  >
    <div
      class="uc-fe-form-group-title c2"
    >
      Group 1
    </div>
    <div>
      <div
        class="c3 uc-fe-form-item uc-fe-row c4"
      >
        <div
          class="uc-fe-form-label c5 c6 uc-fe-col c7"
          span="3"
        >
          upload
        </div>
        <div
          class="uc-fe-form-controller c6 uc-fe-col c8"
          span="9"
        >
          <div>
            <div
              class="c9"
            >
              <input
                hidden=""
                type="file"
              />
              <button
                class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c10"
                type="button"
              >
                请选择文件
              </button>
              <span
                class="c11"
              >
                请选择符合规则的文件
              </span>
            </div>
            <div
              class="c12"
            >
              <div
                class="c13 c14"
              >
                <div
                  class="c15"
                >
                  你还未上传任何内容
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3 uc-fe-form-item uc-fe-row c4"
      >
        <div
          class="uc-fe-form-label c5 c6 uc-fe-col c7"
          span="3"
        >
          switch
        </div>
        <div
          class="uc-fe-form-controller c6 uc-fe-col c8"
          span="9"
        >
          <div
            class="c16"
          >
            <div
              class="c17 c18"
            >
              <span
                class="c19 c20"
              >
                ON
              </span>
              <span
                class="c21 c20"
              >
                OFF
              </span>
              <span
                class="c22 c23"
              >
                <span
                  class="c24 c25"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-form-group c1"
  >
    <div
      class="uc-fe-form-group-title c2"
    >
      Group 2
    </div>
    <div>
      <div
        class="c3 uc-fe-form-item uc-fe-row c4"
      >
        <div
          class="uc-fe-form-label c5 c6 uc-fe-col c7"
          span="3"
        >
          slider
        </div>
        <div
          class="uc-fe-form-controller c6 uc-fe-col c8"
          span="9"
        >
          <div
            class="c26"
          >
            <div
              class="c27"
            >
              <div
                class="uc-fe-slider"
              >
                <div
                  class="uc-fe-slider-rail"
                />
                <div
                  class="uc-fe-slider-track"
                  style="left:0%;width:10%;"
                />
                <div
                  class="uc-fe-slider-step"
                />
                <div
                  aria-disabled="false"
                  aria-valuemax="300"
                  aria-valuemin="0"
                  aria-valuenow="10"
                  class="uc-fe-slider-handle"
                  role="slider"
                  style="left:10%;"
                  tabindex="0"
                />
                <div
                  class="uc-fe-slider-mark"
                />
              </div>
            </div>
            <div
              class="uc-fe-numberinput uc-fe-numberinput-styletype-default c28"
            >
              <div>
                <span
                  class="c29 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c30"
                  unselectable="unselectable"
                >
                  <i
                    class="uc-fe-icon icon__caret-up c31"
                  />
                </span>
                <span
                  class="c32 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c30"
                  unselectable="unselectable"
                >
                  <i
                    class="uc-fe-icon icon__caret-down c31"
                  />
                </span>
              </div>
              <div
                class="c33 uc-fe-numberinput-input-wrap c34"
              >
                <input
                  autocomplete="off"
                  class="c35 uc-fe-numberinput-input c36"
                  max="100"
                  min="0"
                  step="1"
                  value="10"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3 uc-fe-form-item uc-fe-row c4"
      >
        <div
          class="uc-fe-form-label c5 c6 uc-fe-col c7"
          span="3"
        >
          input
        </div>
        <div
          class="uc-fe-form-controller c6 uc-fe-col c8"
          span="9"
        >
          <span
            class="uc-fe-input c37"
          >
            <span
              class="c38"
            >
              <input />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form demo -- item 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c14 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c8:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c13 {
  display: table-cell;
  vertical-align: middle;
}

.c12 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c12 .c15 {
  color: #3860f4;
}

.c12 .c16 {
  color: #526075;
}

.c7 {
  display: inline-block;
  cursor: pointer;
}

.c9 {
  margin-left: 5px;
}

.c10 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c11 {
  border: none;
}

<form
  class="uc-fe-form c0"
>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="3"
    >
      横向布局
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="9"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c7"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c8"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c9"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c7"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c8"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c9"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c14"
    >
      竖向布局
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c14"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c7"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c8"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c9"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c7"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c8"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c9"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
